# django_admin_tabs

./: AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.serena/: project.yml
.skills/admin-theme-integration/: SKILL.md
.skills/publish-django-package/: SKILL.md
.skills/rename-django-project/: SKILL.md
django_admin_tabs/: apps.py
django_admin_tabs/templates/django_admin_tabs/: base.html
example/: manage.py
example/example/: settings.py  wsgi.py
example/templates/admin/: base_site.html
nav_toolbar/: README.md  apps.py  middleware.py
nav_toolbar/static/nav_toolbar/: tabs.css  tabs.js
nav_toolbar/templates/admin/: base_site.html
nav_toolbar/templates/nav_toolbar/: inject.html
