[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-nav-toolbar"
version = "0.1.0"
description = "Smart navigation tabs for Django Admin"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["django", "admin", "tabs", "navigation"]

[project.urls]
Homepage = "https://github.com/lazyjean/django-nav-toolbar"
Repository = "https://github.com/lazyjean/django-nav-toolbar"
Issues = "https://github.com/lazyjean/django-nav-toolbar/issues"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "django",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nav_toolbar*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["nav_toolbar"]
